[package]
name = "rusty-can"
version = "0.1.0"
authors = ["Mitchell Caisse <mitchell@mwcaisse.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socketcan = "3.3.0"
egui = "0.27.2"
eframe = "0.27.2"
env_logger = "0.11.3"
